2010-01-07  Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandora_console_upgrade: Changed permissions in this file to make it executable by default.

	Fixes bug #3146314.

2010-01-05  Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/help/en/help_create_agent.php
	include/help/en/help_reconscript_definition.php
	include/help/en/help_warning_status.php
	include/help/en/help_manage_alert_list.php
	include/help/en/help_critical_status.php
	include/help/es/help_create_agent.php
	include/help/es/help_reconscript_definition.php
	include/help/es/help_warning_status.php
	include/help/es/help_manage_alert_list.php
	include/help/es/help_critical_status.php: Added new help menus. 

	* include/functions.php: Added new constants.

	* godmode/agentes/module_manager_editor_common.php
	godmode/agentes/agent_manager.php
	godmode/servers/manage_recontask_form.php
	godmode/alerts/configure_alert_template.php: Added contextual helps.

2010-12-28  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Fixed link for current documentation page at 
	openideas.info Wiki.

	* operation/agentes/graphs.php: Removed divs which makes the empty graphs
	render badly.

2010-12-27  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql, include/config_process.php: Updated
	  version strings for the 3.2 release.

2010-12-27  Sancho Lerena <slerena@artica.es>

	* pandora_console.redhat.spec: Some package deps. was missing for redhat.

	* include/functions.php: get_snmpwalk() now accepts a specific part of
	the SNMP MIB, that allow to do not search the full mib on user selection.
	(Used on the enterprise massive SNMP module adition).

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/control: added php5-curl dependency.

2010-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb_data.sql: added custom sql for reports, "Group view".
	
	* include/functions_io.php: fixed the "safe_output" function when decode
	the html entity &lt; or &gt; for < or > char.
